# sakar_asignment

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/single_robo_bringup/share/single_robo_bringup/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/single_robo_perception/share/single_robo_perception/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/single_robo_bringup/: CMakeLists.txt
src/single_robo_bringup/config/: amcl.yaml  basic_bt_tree.xml  bt_navigator.yaml  costmap.yaml  planner_server.yaml  rviz_map_config.rviz
src/single_robo_bringup/launch/: diferent_odoms.launch.py  kalman_filter.launch.py  single_robo_nav_map.launch.py  single_robo_spawn.launch.py
src/single_robo_custom_interface/: CMakeLists.txt  package.xml
src/single_robo_custom_interface/msg/: ClusterPoints.msg  ComWithID.msg
src/single_robo_discription/: CMakeLists.txt
src/single_robo_discription/config/: GZ_bridge.yaml  ekf.yaml  ps4_config.yaml
src/single_robo_discription/urdf/: lidar_sensor.xacro
src/single_robo_odometry/: package.xml  setup.cfg  setup.py
src/single_robo_odometry/single_robo_odometry/: imu_republisher.py  odom_tf_pub_.py  odom_tf_pub_w_error.py  odometry_calculation.py  odometry_error.py
src/single_robo_perception/: package.xml  setup.cfg  setup.py
src/single_robo_perception/dataset/: Train.txt  data.yaml
src/single_robo_perception/single_robo_perception/: camera_feed.py  psedo_code.py  rviz_point_visualiser.py
(+179 files in other folders)
